Refactoring of user registration process