@@ -2,7 +2,9 @@ package ru.shanalotte.servlets;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import jakarta.servlet.RequestDispatcher;
 import jakarta.servlet.ServletConfig;
@@ -15,14 +17,10 @@ import org.springframework.beans.factory.config.AutowireCapableBeanFactory;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.AnnotationConfigApplicationContext;
 
-/**
- * Servlet implementation class ImageServlet
- */
 @WebServlet("/image/*")
 public class ImageServlet extends HttpServlet {
+
 	private static final long serialVersionUID = 1L;
-
-
 
 	@Override
 	public void init(ServletConfig config) throws ServletException {
@@ -32,16 +30,18 @@ public class ImageServlet extends HttpServlet {
 		beanFactory.autowireBean(this);
 	}
 
-
-	/**
-	 * @see HttpServlet#doGet(HttpServletRequest request, HttpServletResponse response)
-	 */
 	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-		String file_name = URLDecoder.decode(request.getPathInfo().substring(1), "UTF-8"); // Get parameter from url.
-		File file = new File(getServletContext().getInitParameter("images.location"), file_name); // File location on disk.
-		
-		// Serve file.
-		response.setHeader("Content-Type", getServletContext().getMimeType(file_name));
+		String fileName = determineFileName(request);
+		serveFileToUser(request, response, fileName);
+	}
+
+	private String determineFileName(HttpServletRequest request) throws UnsupportedEncodingException {
+		return URLDecoder.decode(request.getPathInfo().substring(1), StandardCharsets.UTF_8);
+	}
+
+	private void serveFileToUser(HttpServletRequest request, HttpServletResponse response, String fileName) throws ServletException, IOException {
+		File file = new File(getServletContext().getInitParameter("images.location"), fileName);
+		response.setHeader("Content-Type", getServletContext().getMimeType(fileName));
 		response.setHeader("Content-Length", String.valueOf(file.length()));
 		response.setHeader("Content-Disposition", "inline; filename=\"" + file.getName() + "\"");
 		try{
@@ -52,18 +52,13 @@ public class ImageServlet extends HttpServlet {
 			disp.forward(request, response);
 		}
 		catch(Exception e){
-			// We display 404 on other exceptions too, but we log the error.
 			e.printStackTrace(System.err);
 			RequestDispatcher disp = getServletContext().getRequestDispatcher("/404.html");
 			disp.forward(request, response);
 		}
 	}
 
-	/**
-	 * @see HttpServlet#doPost(HttpServletRequest request, HttpServletResponse response)
-	 */
 	protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-		// TODO Auto-generated method stub
 		doGet(request, response);
 	}
 
